<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context="com.sener35gmail.burak.myapplication.UserProfile">



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/Profie_name"
            android:textColor="?android:attr/colorBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="27dp"
            android:text="@string/Profile_surname"
            android:textColor="?android:attr/colorBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="24dp"
            android:text="@string/Profile_email_adress"
            android:textColor="?android:attr/colorBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="20dp"
            android:text="@string/P_password"
            android:textColor="?android:attr/colorBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="29dp"
            android:text="@string/user_type_changed"
            android:textColor="?android:attr/colorBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/phone_number"
            android:layout_marginTop="31dp"
            android:text="@string/p_birth_date"
            android:textColor="?android:attr/colorBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="19dp"
            android:text="@string/gender_changed"
            android:textColor="?android:attr/colorBackground"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:ems="10"
            android:textColor="#000000"
            android:inputType="textPersonName"
            android:text="@string/show_current_user" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/editText4"
            android:layout_alignStart="@+id/editText4"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/show_current_user_surname"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignLeft="@+id/editText8"
            android:layout_alignStart="@+id/editText8"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/show_current_user_email"
            android:textColor="#000000"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="274dp" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView11"
            android:layout_alignBottom="@+id/textView11"
            android:layout_alignLeft="@+id/editText9"
            android:layout_alignStart="@+id/editText9"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/show_user_password"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText10"
            android:layout_alignStart="@+id/editText10"
            android:layout_alignTop="@+id/textView3"
            android:ems="10"
            android:textColor="#000000"
            android:inputType="textPersonName"
            android:text="@string/show_current_user_gender" />

        <EditText
            android:id="@+id/editText12"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText11"
            android:layout_alignStart="@+id/editText11"
            android:layout_alignTop="@+id/phone_number"
            android:digits="0123456789"
            android:ems="10"
            android:textColor="#000000"
            android:inputType="textPersonName"
            android:text="@string/show_current_user_phone" />

        <EditText
            android:id="@+id/editText13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editText11"
            android:layout_alignRight="@+id/editText11"
            android:layout_alignTop="@+id/textView7"
            android:ems="10"
            android:textColor="#000000"
            android:inputType="textPersonName"
            android:text="@string/show_current_user_birthdate" />

        <Button
            android:id="@+id/btn_set"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText14"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/button_set_user_info_radious"
            android:text="@string/button_set_user" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editText13"
            android:layout_marginTop="15dp"
            android:text="@string/user_type"
            android:textColor="?android:attr/colorBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Gsm No:" />

        <EditText
            android:id="@+id/editText14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText13"
            android:layout_alignStart="@+id/editText13"
            android:layout_alignTop="@+id/textView5"
            android:ems="10"
            android:textColor="#000000"
            android:inputType="textPersonName"
             />

        <Button
            android:id="@+id/btn_changeProfileInfo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_set"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@+id/btn_set"
            android:layout_toRightOf="@+id/btn_set"
            android:enabled="true"
            android:background="@drawable/button_radious_show_comments"
            android:text="@string/profil_duzenle" />


</RelativeLayout>
